[package]
name = "pomodoro-ss-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.26.1"
futures = "0.3.27"
notify-rust = "4.8.0"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"
winapi = { version = "0.3.9", features = ["winuser"] }
